--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     <style name="question_layout">
         <item name="android:layout_margin">8dp</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_gicontent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">vertical</item>
     </style>
 
